syntax = "proto3";

package contract.dto;

message NoteTypeDto {
  string note_type_id = 1;
  string name = 2;
  string color = 3;
}
